[project]
name = "service-titan-syncer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click==8.1.7",
    "httpx==0.27.2",
    "pydantic==2.9.0",
    "python-dotenv==1.0.1",
    "structlog==24.1.0",
    "tenacity==8.5.0",
]
[project.scripts]
stsync = "stsync:cli"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["stsync"]
