[project]
name = "service-titan-syncer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click==8.1.7",
    "httpx==0.27.2",
    "pydantic==2.9.0",
    "python-dotenv==1.0.1",
    "structlog==24.1.0",
    "tenacity==8.5.0",
]
[project.scripts]
stsync = "stsync:cli"

[tool.uv]
package = true
dev-dependencies = [
  "ruff==0.6.9",
  "mypy==1.10.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
  "stsync",
  "stsync_auth",
  "stsync_http",
  "stsync_db",
  "stsync_models",
  "stsync_settings",
  "stsync_config",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
plugins = []
# Use a single regex string; escape backslashes for TOML strings
exclude = "(^\\.venv/|^service_titan_syncer\\.egg-info/|^dist/|^build/|^stubs/)"
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
pretty = true
